--- a/src/app/paginas/inicio/inicio.component.html
+++ b/src/app/paginas/inicio/inicio.component.html
@@ -6,107 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <nav [ngClass]="{'navBajando': isScrollingDown}">
-        <ul>
-            <li class="link"><a [ngClass]="{'active': claseActiva == 'inicio'}" (click)="scrollToElement('inicio')">Inicio</a></li>
-            <li class="link"><a [ngClass]="{'active': claseActiva == 'proyectos'}" (click)="scrollToElement('proyectos')">Proyectos</a></li>
-            <li class="link"><a [ngClass]="{'active': claseActiva == 'info'}" (click)="scrollToElement('info')">Informacion</a></li>
-            <li class="link"><a [ngClass]="{'active': claseActiva == 'experiencias'}" (click)="scrollToElement('experiencias')">Experiencias</a></li>
-        </ul>
-    </nav>
-    <div class="contenedor">
-      <div id="inicio" class="contenedorInfo">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-      </div>
-      <div id="proyectos" class="contenedorInfo">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-      </div>
-      <div id="info" class="contenedorInfo">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-      </div>
-      <div id="experiencias" class="contenedorInfo">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sequi
-          delectus provident ratione tenetur saepe autem nobis, hic magnam qui
-          cupiditate fuga. Voluptatum dolores ducimus id? Explicabo odit
-          incidunt alias?
-        </p>
-      </div>
-    </div>
+    <app-navbar></app-navbar>
+    <app-inicio-component id="inicio"></app-inicio-component>
+    <app-experiencia id="experiencias"></app-experiencia>
+    <app-proyectos id="proyectos"></app-proyectos>
+    <app-informacion id="info"></app-informacion>
   </body>
 </html>
