--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -1,3 +1,7 @@
 .contenedorInicio{
-    margin-top: 10dvh;
+    background-color: rgb(129, 128, 128);
+    clip-path: polygon(50% 0, 100% 0, 100% 74%, 50% 100%, 0 74%, 0 0);
+    height: 122dvh;
+    position: relative;
+    z-index: 9;
 }
