--- a/src/app/componentes/navbar/navbar.component.css
+++ b/src/app/componentes/navbar/navbar.component.css
@@ -2,11 +2,14 @@ nav {
     overflow: hidden;
     background-color: transparent;
     color: rgb(0, 0, 0);
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
-    transition: 500ms;
+   animation: animarNav linear both;
+   animation-timeline: scrool(root);
+   animation-range: 0 200px;
+    z-index: 10 !important;
 }
 
 ul {
@@ -27,12 +30,15 @@ ul {
     }
 }
 
-.navBajando {
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
-    filter: opacity(0.4);
-}
 
+
+@keyframes animarNav{
+    to{
+        color: rgb(255, 255, 255);
+        background: rgba(255,255,255,.4);
+        backdrop-filter: blur(5px);
+    }
+}
 .link {
     a {
         background-image: linear-gradient(to right,
