--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,2 +1,25 @@
 <div class="contenedorInicio">
-   </div>
+  <div class="text">
+    <p class="fuerte">Daniel Moreno</p>
+    <p class="medio">Desarrollador Full-stack</p>
+    <p class="sub">
+      Creando ideas, generando soluciones y apoyando startups en crecimiento y
+      estables
+    </p>
+  </div>
+  <div class="icon">
+    <div class="image">
+      <img src="../../../assets/Images/undraw_progressive_app_m-9-ms.svg">
+    </div>
+    <div class="texto">
+      <p class="sub">
+        Desarrollador back-end desde el 2017, como colaborador de repositorios
+        en Github, con librer&iacute;as y frameworks que permiten la mejor disposición 
+        para seguridad de datos y escalabilidad de aplicaciones de escritorio, web y móvil
+      </p>
+    </div>
+  </div>
+</div>
+<script>
+   console.log("Hola")
+</script>
