--- a/src/app/paginas/inicio/inicio.component.html
+++ b/src/app/paginas/inicio/inicio.component.html
@@ -11,5 +11,6 @@
     <app-experiencia id="experiencias"></app-experiencia>
     <app-proyectos id="proyectos"></app-proyectos>
     <app-informacion id="info"></app-informacion>
+    <app-footer id="footer"></app-footer>
   </body>
 </html>
