--- a/src/app/componentes/navbar/navbar.component.css
+++ b/src/app/componentes/navbar/navbar.component.css
@@ -35,7 +35,7 @@ ul {
 @keyframes animarNav{
     to{
         color: rgb(255, 255, 255);
-        background: rgba(255,255,255,.4);
+        background: rgba(25 50 44 / 0%);
         backdrop-filter: blur(5px);
     }
 }
