--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,3 +1,92 @@
 <div class="contenedorProyectos">
-
+  <div class="proyectos">
+    <div class="proyecto">
+        <h3>Titulo</h3>
+        <h4>Sub</h4>
+        <p>Datos</p>
+    </div>
+    <div class="proyecto">
+        <h3>Titulo</h3>
+        <h4>Sub</h4>
+        <p>Datos</p>
+    </div>
+    <div class="proyecto">
+        <h3>Titulo</h3>
+        <h4>Sub</h4>
+        <p>Datos</p>
+    </div>
+    <div class="proyecto">
+        <h3>Titulo</h3>
+        <h4>Sub</h4>
+        <p>Datos</p>
+    </div>
+    <div class="proyecto">
+        <h3>Titulo</h3>
+        <h4>Sub</h4>
+        <p>Datos</p>
+    </div>
+    <div class="proyecto">
+        <h3>Titulo</h3>
+        <h4>Sub</h4>
+        <p>Datos</p>
+    </div>
+    <div class="proyecto">
+        <h3>Titulo</h3>
+        <h4>Sub</h4>
+        <p>Datos</p>
+    </div>
+  </div>
+  <div class="tecnologias">
+    <div class="tecnologiaFrontEnd">
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+    </div>
+    <div class="tecnologiaBackEnd">
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+    </div>
+    <div class="tecnologiaDb">
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="img">
+            <img src="https://dummyimage.com/300" alt="Tecnologia">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
