--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -1,10 +1,13 @@
 <div class="contenedorExperiencia">
     <div class="texto">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore
-          tenetur itaque nihil eaque blanditiis dolor reprehenderit, ipsam iste
-          quos. Maiores vitae aut magnam? Odio voluptatibus odit impedit animi nisi?
+          En el &aacute;mbito laboral, contando con más de 5 años de experiencia, en empresas 
+          colombianas y norteamericanas, haciendo parte de proyectos públicos y menciones en los mismos
+          
         </p>
+        
+          
+        
       </div>
   <div class="lista">
     <ul>
@@ -16,43 +19,40 @@
   </div>
   <div class="contenido">
     <article id="opcion1" class="opcion mostrar">
-      <h2>Titulo 1</h2>
-      <h3>Sub titulo</h3>
+      <h2>Desarrollador de software | 2019 - 2020 </h2>
+      <h3>Expertos seguridad - Colombia | Remoto</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptas
-        dolore labore sapiente minus praesentium necessitatibus culpa deserunt
-        hic ad sunt quis, tempore, ipsum quasi repellendus blanditiis
-        repudiandae temporibus itaque!
+        Desarrollador backend, administrador de bases de datos e infraestructura, con tecnologías rest y soap
+        para uso residencial, hospitalario y educativo
       </p>
     </article>
     <article id="opcion2" class="opcion">
-      <h2>Titulo 2</h2>
-      <h3>Sub titulo</h3>
+      <h2>Analista de soporte | 2020 - 2021</h2>
+      <h3>Westmed - New York & Connecticut</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptas
-        dolore labore sapiente minus praesentium necessitatibus culpa deserunt
-        hic ad sunt quis, tempore, ipsum quasi repellendus blanditiis
-        repudiandae temporibus itaque!
+        Mesa de soporte nivel 3 de aplicación web de Westmed, externa e interna con
+        capacidad de analizar problemas de software, bugs de actualizaciones, reportes
+        de clientes y usuarios del sistema interno, dar soluciones relacionadas con datos en bases
+        de datos relacionales y no relacionales 
       </p>
     </article>
     <article id="opcion3" class="opcion">
-      <h2>Titulo 3</h2>
-      <h3>Sub titulo</h3>
+      <h2>Software developer | 2021 - 2023</h2>
+      <h3>VensureHR - Texas & New York</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptas
-        dolore labore sapiente minus praesentium necessitatibus culpa deserunt
-        hic ad sunt quis, tempore, ipsum quasi repellendus blanditiis
-        repudiandae temporibus itaque!
+        Desarrollador FullStack de aplicaciones web, escritorio y m&oacute;vil, desarrollando 
+        desde cero y terminar dichos proyectos con entrega de documentaci&oacute;n para 
+        usuarios finales, usuarios recurrentes y oficiales
       </p>
     </article>
     <article id="opcion4" class="opcion">
-      <h2>Titulo 4</h2>
-      <h3>Sub titulo</h3>
+      <h2>Analista de desarrollo | 2023 - Presente</h2>
+      <h3>Sibo Avance  - Colombia | Remoto</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptas
-        dolore labore sapiente minus praesentium necessitatibus culpa deserunt
-        hic ad sunt quis, tempore, ipsum quasi repellendus blanditiis
-        repudiandae temporibus itaque!
+        Desarrollador de software FullStack, analista de calidad y l&iacute;der de investigaci&oacute;n 
+        de Inteligencia Artificial, enfoque principal en desarrollo de aplicaciones Web y móviles con
+        variaci&oacute;n de escritorio, encargado de integraciones con endPoints terceros e implementaciones
+        en ambiente de producci&oacute;n y local
       </p>
     </article>
   </div>
