--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,90 +1,93 @@
 <div class="contenedorProyectos">
   <div class="proyectos">
     <div class="proyecto">
-        <h3>Titulo</h3>
-        <h4>Sub</h4>
-        <p>Datos</p>
+      <h3>FinanzasApp</h3>
+      <h4>Ionic 7 | Node Js | MongoDB</h4>
+      <p>
+        Proyecto para tutorial de una aplicaci&oacute;n dirigida a tus finanzas,
+        para llevar tus gastos, tus ahorros y deudas, con guardado local, y
+        guardado en línea seg&uacute;n tus preferencias
+      </p>
     </div>
     <div class="proyecto">
-        <h3>Titulo</h3>
-        <h4>Sub</h4>
-        <p>Datos</p>
+      <h3>Back-end MotoMastersMD</h3>
+      <h4>.Net 7 y JWT Bearer | MSSQL</h4>
+      <p>
+        Proyecto Back-end para aplicaci&oacute;n de trabajo acad&eacute;mico
+      </p>
     </div>
     <div class="proyecto">
-        <h3>Titulo</h3>
-        <h4>Sub</h4>
-        <p>Datos</p>
+      <h3>HonneyWell</h3>
+      <h4>HTML, CSS y JS | PHP | MySql</h4>
+      <p>Aplicación E-Commerce para empresa apicultora multinacional</p>
     </div>
     <div class="proyecto">
-        <h3>Titulo</h3>
-        <h4>Sub</h4>
-        <p>Datos</p>
+      <h3>Back-end Peluquería</h3>
+      <h4>.Net 6 | MSSQL</h4>
+      <p>
+        Aplicación Back-end de peluquerías, para implementación de aplicación
+        móvil
+      </p>
     </div>
     <div class="proyecto">
-        <h3>Titulo</h3>
-        <h4>Sub</h4>
-        <p>Datos</p>
-    </div>
-    <div class="proyecto">
-        <h3>Titulo</h3>
-        <h4>Sub</h4>
-        <p>Datos</p>
-    </div>
-    <div class="proyecto">
-        <h3>Titulo</h3>
-        <h4>Sub</h4>
-        <p>Datos</p>
+      <h3>Sige</h3>
+      <h4>.Net Framework 3.5 | Windows Forms | MSSQL</h4>
+      <p>
+        Aplicación de escritorio dirigido a control de acceso, manejo de
+        horarios e informes legales, con uso de facturación electrónica para
+        venta de servicios.
+      </p>
     </div>
   </div>
   <div class="tecnologias">
     <div class="tecnologiaFrontEnd">
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
     </div>
     <div class="tecnologiaBackEnd">
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
     </div>
     <div class="tecnologiaDb">
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-            <img src="https://dummyimage.com/300" alt="Tecnologia">
+          <img src="https://dummyimage.com/300" alt="Tecnologia" />
         </div>
       </div>
     </div>
