--- a/src/app/paginas/inicio/inicio.component.html
+++ b/src/app/paginas/inicio/inicio.component.html
@@ -10,7 +10,7 @@
     <app-inicio-component id="inicio"></app-inicio-component>
     <app-experiencia id="experiencias"></app-experiencia>
     <app-proyectos id="proyectos"></app-proyectos>
-    <app-informacion id="info"></app-informacion>
+    <!-- <app-informacion id="info"></app-informacion> -->
     <app-footer id="footer"></app-footer>
   </body>
 </html>
