--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,23 +1,74 @@
 <footer>
-    <div class="derecho">
-        <p>Hola5</p>
-        <p>Hola4</p>
-        <p>Hola3</p>
-        <p>Hola2</p>
-        <p>Hola1</p>
+  <div class="derecho">
+    <div>
+      <h2>Redes sociales</h2>
     </div>
-    <div class="medio">
-        <p>Hola5</p>
-        <p>Hola4</p>
-        <p>Hola3</p>
-        <p>Hola2</p>
-        <p>Hola1</p>
+    <div>
+      <ul>
+        <span
+          (click)="llevarAredSocial('facebook')"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fa-brands fa-facebook"> &nbsp;&nbsp;Facebook</i>
+        </span>
+        <span
+          (click)="llevarAredSocial('github')"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fa-brands fa-github">&nbsp;&nbsp;Github</i>
+        </span>
+        <span
+          (click)="llevarAredSocial('youtube')"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fa-brands fa-youtube">&nbsp;&nbsp;YouTube</i>
+        </span>
+      </ul>
     </div>
-    <div class="izquierda">
-        <p>Hola5</p>
-        <p>Hola4</p>
-        <p>Hola3</p>
-        <p>Hola2</p>
-        <p>Hola1</p>
+  </div>
+  <div class="izquierda">
+    <div>
+      <h2>Fuentes de inspiraci&oacute;n</h2>
     </div>
+    <div>
+      <ul>
+        <span
+          (click)="llevarAredSocial('w3schools')"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fas fa-globe">&nbsp;&nbsp;w3schools</i>
+        </span>
+        <span
+          (click)="canalMiduDev()"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fa-brands fa-youtube">&nbsp;&nbsp;Midelive</i>
+        </span>
+        <span
+          (click)="canalFaztCode()"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fa-brands fa-youtube">&nbsp;&nbsp;FaztCode</i>
+        </span>
+        <span
+          (click)="canalFreeCodeCamp()"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fa-brands fa-youtube">&nbsp;&nbsp;FreeCodeCamp.org</i>
+        </span>
+        <span
+          (click)="canalHdLeon()"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fa-brands fa-youtube">&nbsp;&nbsp;hdeleon.net</i>
+        </span>
+        <span
+          (click)="canalMagtimus()"
+          style="font-size: 12px; color: rgb(255, 255, 255)"
+        >
+          <i class="fa-brands fa-youtube">&nbsp;&nbsp;MagtimusPro</i>
+        </span>
+      </ul>
+    </div>
+  </div>
 </footer>
