--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -8,6 +8,10 @@
         para llevar tus gastos, tus ahorros y deudas, con guardado local, y
         guardado en línea seg&uacute;n tus preferencias
       </p>
+      <div class="github">
+        <a (click)="abrirGithub('FinanzasApp')" >Github</a>
+        <img (click)="abrirGithub('FinanzasApp')" src="../../../assets/Icons/icons8-arrow-50.png" alt="" />
+      </div>
     </div>
     <div class="proyecto">
       <h3>Back-end MotoMastersMD</h3>
@@ -15,11 +19,19 @@
       <p>
         Proyecto Back-end para aplicaci&oacute;n de trabajo acad&eacute;mico
       </p>
+      <div class="github">
+        <a (click)="abrirGithub('BACKMotoMastersDM')">Github</a>
+        <img (click)="abrirGithub('BACKMotoMastersDM')" src="../../../assets/Icons/icons8-arrow-50.png" alt="" />
+      </div>
     </div>
     <div class="proyecto">
       <h3>HonneyWell</h3>
       <h4>HTML, CSS y JS | PHP | MySql</h4>
       <p>Aplicación E-Commerce para empresa apicultora multinacional</p>
+      <div class="github">
+        <a (click)="abrirGithub('HonneyWell')" >Github</a>
+        <img (click)="abrirGithub('HonneyWell')"src="../../../assets/Icons/icons8-arrow-50.png" alt="" />
+      </div>
     </div>
     <div class="proyecto">
       <h3>Back-end Peluquería</h3>
@@ -28,6 +40,10 @@
         Aplicación Back-end de peluquerías, para implementación de aplicación
         móvil
       </p>
+      <div class="github">
+        <a (click)="abrirGithub('BACK_PELUQUERIA')" >Github</a>
+        <img (click)="abrirGithub('BACK_PELUQUERIA')" src="../../../assets/Icons/icons8-arrow-50.png" alt="" />
+      </div>
     </div>
     <div class="proyecto">
       <h3>Sige</h3>
@@ -37,57 +53,85 @@
         horarios e informes legales, con uso de facturación electrónica para
         venta de servicios.
       </p>
+      <div class="github">
+        <a (click)="abrirGithub('Sige')" >Github</a>
+        <img (click)="abrirGithub('Sige')" src="../../../assets/Icons/icons8-arrow-50.png" alt="" />
+      </div>
     </div>
   </div>
   <div class="tecnologias">
     <div class="tecnologiaFrontEnd">
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img
+            src="../../../assets/Icons/react-javascript-js-framework-facebook-svgrepo-com.svg"
+            alt="React"
+          />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img
+            src="../../../assets/Icons/angular-svgrepo-com.svg"
+            alt="Angular"
+          />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img
+            src="../../../assets/Icons/ionic-icon-svgrepo-com.svg"
+            alt="Ionic"
+          />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img
+            src="../../../assets/Icons/aspx-file-format-symbol-svgrepo-com.svg"
+            alt="aspx"
+          />
         </div>
       </div>
     </div>
     <div class="tecnologiaBackEnd">
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img
+            src="../../../assets/Icons/dot-net-svgrepo-com.svg"
+            alt="dotnet"
+          />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img
+            src="../../../assets/Icons/node-js-svgrepo-com.svg"
+            alt="nodejs"
+          />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img src="../../../assets/Icons/php-svgrepo-com.svg" alt="php" />
         </div>
       </div>
     </div>
     <div class="tecnologiaDb">
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img
+            src="../../../assets/Icons/mongodb-svgrepo-com.svg"
+            alt="mongodb"
+          />
         </div>
       </div>
       <div class="tarjeta">
         <div class="img">
-          <img src="https://dummyimage.com/300" alt="Tecnologia" />
+          <img
+            src="../../../assets/Icons/sql-database-sql-azure-svgrepo-com.svg"
+            alt="sql"
+          />
         </div>
       </div>
     </div>
