--- a/src/app/componentes/proyectos/proyectos.component.css
+++ b/src/app/componentes/proyectos/proyectos.component.css
@@ -1,5 +1,5 @@
 .contenedorProyectos {
-    height: 91dvh;
+    height: 100dvh;
     position: relative;
     z-index: 7;
     display: flex;
@@ -22,13 +22,63 @@
         height: 70%;
         width: 90%;
 
-        .proyecto{
-            padding: 5px;
+        .proyecto {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            padding: 8px;
             overflow: hidden;
-            width: 370px; 
-            height: 150px;
+            width: 370px;
+            height: 190px;
             border-radius: 15px;
-            border: 2px solid black;
+            background-color: rgb(51, 50, 50);
+            transition: ease-in-out 300ms;
+            box-shadow: 0px 0px 5px rgba(82, 82, 82, 0.432);
+            cursor: pointer;
+            opacity: 0.8;
+
+            h3 {
+                color: #75c58e;
+            }
+
+            h4 {
+                color: #40957f;
+            }
+
+            p {
+                color: white;
+            }
+
+            .github{
+                display: flex;
+                align-items: center;
+                width: 50%;
+                transition: ease-in-out 300ms;
+                opacity: 0.7;
+
+                a{
+                    text-decoration: none;
+                    color: white;
+                }
+
+                img{
+                    height: 20px;
+                    margin-left: 5px;
+                }
+            }
+            
+            .github:hover{
+                scale: 1.05;
+                opacity: 1;
+            }
+
+
+        }
+
+        .proyecto:hover {
+            scale: 1.01;
+            background-color: rgb(63, 61, 61);
+            opacity: 1;
         }
     }
 
@@ -43,50 +93,107 @@
 
         .tecnologiaFrontEnd {
             gap: 5%;
-            border: 1px solid black;
             border-radius: 10px;
             display: flex;
             flex-wrap: wrap;
             padding: 10px;
-            .tarjeta {
+            width: 370px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            transition: ease-in-out 300ms;
 
-                img{
+            .tarjeta {
+                transition: ease-in-out 300ms;
+                opacity: 0.5;
+                cursor: pointer;
+
+                img {
                     width: 60px;
                     height: 60px;
                 }
             }
+
+            .tarjeta:hover {
+                scale: 1.3;
+                opacity: 1;
+            }
+        }
+
+        .tecnologiaFrontEnd:hover {
+            scale: 1.1;
+            box-shadow: 0px 0px 5px rgba(82, 82, 82, 0.432);
         }
 
         .tecnologiaBackEnd {
             padding: 10px;
             gap: 5%;
-            border: 1px solid black;
             border-radius: 10px;
             display: flex;
             flex-wrap: wrap;
-            .tarjeta {
+            width: 370px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            transition: ease-in-out 300ms;
 
-                img{
+            .tarjeta {
+                transition: ease-in-out 300ms;
+                opacity: 0.5;
+                cursor: pointer;
+
+                img {
                     width: 60px;
                     height: 60px;
                 }
             }
+
+            .tarjeta:hover {
+                scale: 1.3;
+                opacity: 1;
+            }
+        }
+
+        .tecnologiaBackEnd:hover {
+            scale: 1.1;
+            box-shadow: 0px 0px 5px rgba(82, 82, 82, 0.432);
         }
 
         .tecnologiaDb {
             padding: 10px;
             gap: 5%;
-            border: 1px solid black;
             border-radius: 10px;
             display: flex;
             flex-wrap: wrap;
-            .tarjeta {
+            width: 370px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            transition: ease-in-out 300ms;
 
-                img{
+            .tarjeta {
+                transition: ease-in-out 300ms;
+                opacity: 0.5;
+                cursor: pointer;
+
+                img {
                     width: 60px;
                     height: 60px;
                 }
             }
+
+            .tarjeta:hover {
+                scale: 1.3;
+                opacity: 1;
+            }
+        }
+
+        .tecnologiaDb:hover {
+            scale: 1.1;
+            box-shadow: 0px 0px 5px rgba(82, 82, 82, 0.432);
         }
     }
 }
