--- a/src/app/paginas/inicio/inicio.component.html
+++ b/src/app/paginas/inicio/inicio.component.html
@@ -12,5 +12,6 @@
     <app-proyectos id="proyectos"></app-proyectos>
     <!-- <app-informacion id="info"></app-informacion> -->
     <app-footer id="footer"></app-footer>
+    <app-footer-desarrollador id="desarrollador"></app-footer-desarrollador>
   </body>
 </html>
