--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="proyecto">
-      <h3>Back-end MotoMastersMD</h3>
+      <h3>MotoMastersMD</h3>
       <h4>.Net 7 y JWT Bearer | MSSQL</h4>
       <p>
         Proyecto Back-end para aplicaci&oacute;n de trabajo acad&eacute;mico
