--- a/src/app/paginas/inicio/inicio.component.css
+++ b/src/app/paginas/inicio/inicio.component.css
@@ -4,4 +4,24 @@
 }
 
 
+@media screen and (max-width: 850px) {
+    #inicio {
+        max-width: 100dvw;
+    }
 
+    #experiencias {
+        max-width: 100dvw;
+    }
+
+    #proyectos {
+        max-width: 100dvw;
+    }
+
+    #footer {
+        max-width: 100dvw;
+    }
+
+    #desarrollador {
+        max-width: 100dvw;
+    }
+}
