--- a/src/app/componentes/navbar/navbar.component.css
+++ b/src/app/componentes/navbar/navbar.component.css
@@ -76,3 +76,15 @@ ul {
         -webkit-background-clip: text !important;
     }
 }
+
+@media screen and (max-width: 850px) {
+    nav{
+        width: 73dvw;
+    }
+    ul{
+        li a{
+            font-size: 2rem;
+        }
+    } 
+    
+}
