Creamos un página 404 y por último se agrega Firebase hosting para tener la página pública.

--- a/src/app/paginas/not-found/not-found.component.html
+++ b/src/app/paginas/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<div class="notFound">
+  <div class="img">
+    <img src="../../../assets/Images/404-error.png" alt="NotFound" />
+  </div>
+  <div class="text">
+    <h3>¡Lo sentimos!</h3>
+    <p>No encontramos la página que busca</p>
+  </div>
+</div>
