--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -70,31 +70,31 @@
 /* Para responsive */
 @media screen and (max-width: 850px) {
     .contenedorInicio {
-        background:url("../../../assets/Images/undraw_progressive_app_m-9-ms.svg");
+        /* background:url("../../../assets/Images/undraw_progressive_app_m-9-ms.svg"); */
         background-repeat: no-repeat;
         background-size: cover;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 73dvw;
+        width: 90dvw;
         
         .text{
-    
+            height: 100%;
             .fuerte {
-                width: 80dvw;
-                font-size: 80px;
+                width: 100%;
+                font-size: 50px;
                 color: #4a4857;
                 transition: ease-in-out 300ms;
             }
     
             
             .medio {
-                width: 80dvw;
-                font-size: 60px;
-                color: black;
+                width: 100%;
+                font-size: 40px;
+                /* color: black; */
             }
             .sub{
-                width: 80dvw;
+                width: 100%;
                 margin: 0;
                 font-size: 30px;
                 color: black;
@@ -108,12 +108,12 @@
             }
 
             .texto{
-            
+            display: none;
                 .sub{
-                    color: #000000;
-                    width: 80dvw;
+                    /* color: #000000; */
+                    width: 100%;
                     font-weight: bold;
-                    font-size: 40px;
+                    font-size: 20px;
                 }
             }
         }
