--- a/src/app/componentes/navbar/navbar.component.css
+++ b/src/app/componentes/navbar/navbar.component.css
@@ -79,11 +79,12 @@ ul {
 
 @media screen and (max-width: 850px) {
     nav{
-        width: 73dvw;
+        width: 100%;
     }
     ul{
+        justify-content: space-between;
         li a{
-            font-size: 2rem;
+            font-size: 1.3rem;
         }
     } 
     
